# api-comparador-saldos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ejemplo_uso_api.py  env.example  main.py  requirements.txt
app/config/: settings.py
app/services/: comparison_service.py
app/utils/: csv_reader.py  excel_writer.py  file_utils.py
backend/: .dockerignore  Dockerfile  INICIO_RAPIDO.md  README.md  data.json  main.py  pyproject.toml  test_api.py
backend/app/api/: endpoints.py
backend/app/services/: comparison_service.py
backend/app/utils/: excel_writer.py
frontend/: Dockerfile  index.html  script.js  style.css
