[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "numpy==1.26.3",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "python-multipart==0.0.6",
    "scalar-fastapi==1.0.3",
    "uvicorn[standard]==0.27.0",
]
